<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>armor_plate_bringup</name>
  <version>0.0.0</version>
  <description>Bringup package for armor plate detection system</description>
  <maintainer email="2719538332@qq.com">minzhi</maintainer>
  <license>TODO: License declaration</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <exec_depend>mindvision_camera</exec_depend>
  <exec_depend>armor_plate_identification</exec_depend>
  <exec_depend>armor_plate_tracker</exec_depend>
  <exec_depend>armor_plate_serial</exec_depend>
  <exec_depend>foxglove_bridge</exec_depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
